--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,12 +88,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-#___gatsbyt {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
 h1,
 h2,
 h3 {
